<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imgCapa"
        android:layout_width="0dp"
        android:layout_height="311dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/capa" />

    <ImageView
        android:id="@+id/imgLogoNetflix"
        android:layout_width="43dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toStartOf="@+id/textSeries"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <ImageView
        android:id="@+id/imgLogoPeakBlinders"
        android:layout_width="90dp"
        android:layout_height="70dp"
        app:layout_constraintBottom_toTopOf="@+id/guideBottomMain"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideTopMain"
        app:srcCompat="@drawable/logo_peaky" />

    <ImageView
        android:id="@+id/imgF1"
        android:layout_width="100dp"
        android:layout_height="60dp"
        app:layout_constraintBottom_toBottomOf="@+id/imgF2"
        app:layout_constraintEnd_toStartOf="@+id/imgF2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="@+id/guideLeftMain"
        app:layout_constraintTop_toTopOf="@+id/imgF2"
        app:srcCompat="@drawable/f1" />

    <ImageView
        android:id="@+id/imgF2"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toStartOf="@+id/imgF3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/imgF1"
        app:layout_constraintTop_toBottomOf="@+id/textLancamentos"
        app:srcCompat="@drawable/f2" />

    <ImageView
        android:id="@+id/imgF3"
        android:layout_width="100dp"
        android:layout_height="60dp"
        app:layout_constraintBottom_toBottomOf="@+id/imgF2"
        app:layout_constraintEnd_toStartOf="@+id/guideRightMain"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/imgF2"
        app:layout_constraintTop_toTopOf="@+id/imgF2"
        app:srcCompat="@drawable/f3" />

    <Button
        android:id="@+id/btnAssistir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:drawableLeft="@drawable/ic_executar_24"
        android:paddingLeft="16dp"
        android:text="@string/button_assistir"
        app:layout_constraintEnd_toStartOf="@+id/btnInfo"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnMinhaLista"
        app:layout_constraintTop_toBottomOf="@+id/textEmpolgante" />

    <Button
        android:id="@+id/btnMinhaLista"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/transparent"
        android:drawableTop="@drawable/ic_adicionar_24"
        android:padding="0dp"
        android:text="@string/button_minha_lista"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="@+id/btnAssistir"
        app:layout_constraintEnd_toStartOf="@+id/btnAssistir"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@id/guideLeftMain"
        app:layout_constraintTop_toTopOf="@+id/btnAssistir" />

    <Button
        android:id="@+id/btnInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/transparent"
        android:drawableTop="@drawable/ic_informacao_24"
        android:padding="0dp"
        android:text="@string/button_info"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="@+id/btnAssistir"
        app:layout_constraintEnd_toEndOf="@id/guideRightMain"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnAssistir"
        app:layout_constraintTop_toTopOf="@+id/btnAssistir" />

    <TextView
        android:id="@+id/textEmpolgante"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/text_empolgante"
        android:textColor="@color/md_theme_background"
        app:layout_constraintEnd_toStartOf="@+id/textSinistro"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textViolencia"
        app:layout_constraintTop_toTopOf="@+id/guideBottomMain" />

    <TextView
        android:id="@+id/textFilmes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_filmes"
        android:textColor="@color/md_theme_background"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/textSeries"
        app:layout_constraintEnd_toStartOf="@+id/textMinhaLista"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textSeries"
        app:layout_constraintTop_toTopOf="@+id/textSeries" />

    <TextView
        android:id="@+id/textSeries"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_series"
        android:textColor="@color/md_theme_background"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/imgLogoNetflix"
        app:layout_constraintEnd_toStartOf="@+id/textFilmes"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/imgLogoNetflix"
        app:layout_constraintTop_toTopOf="@+id/imgLogoNetflix" />

    <TextView
        android:id="@+id/textMinhaLista"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_minha_lista"
        android:textColor="@color/md_theme_background"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/textFilmes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textFilmes"
        app:layout_constraintTop_toTopOf="@+id/textFilmes" />

    <TextView
        android:id="@+id/textViolencia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_violencia"
        android:textColor="@color/md_theme_background"
        app:layout_constraintBottom_toBottomOf="@+id/textEmpolgante"
        app:layout_constraintEnd_toStartOf="@+id/textEmpolgante"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@id/guideLeftMain"
        app:layout_constraintTop_toTopOf="@+id/textEmpolgante" />

    <TextView
        android:id="@+id/textSinistro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_sinistro"
        android:textColor="@color/md_theme_background"
        app:layout_constraintBottom_toBottomOf="@+id/textEmpolgante"
        app:layout_constraintEnd_toEndOf="@id/guideRightMain"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textEmpolgante"
        app:layout_constraintTop_toTopOf="@+id/textEmpolgante" />

    <TextView
        android:id="@+id/textLancamentos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/text_lancamentos"
        android:textColor="@color/md_theme_background"
        app:layout_constraintStart_toStartOf="@+id/guideLeftMain"
        app:layout_constraintTop_toBottomOf="@+id/btnAssistir" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideTopMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.10" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideBottomMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideLeftMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.10" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideRightMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.90" />

</androidx.constraintlayout.widget.ConstraintLayout>